syslogd.c: avoid use of undefined macro (NFCI)

SIGN_NUM_PRIVALS isn't defined anywhere; fix the block, though it's not
actually applicable in NetBSD builds. Issue noted by and patch from RVP
as a peripheral item in PR lib/57172.